html-and-css-almost-finish

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>survey-form</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <section>
+        <section class="heading">
             <h1 id="title">freeCodeCamp Survey Form</h1>
             <p id="description">Thank you for taking the time to help us improve the platform</p>
         </section>
@@ -34,13 +35,13 @@
                         </select>
                     </label>
                     <label for="radio-option">
-                        Would you recommend freeCodeCamp to a friend? <label for="radio-option">
+                        Would you recommend freeCodeCamp to a friend? <label for="radio-option" id="radio-label" class="radio-label">
                             <input type="radio" name="radio-option" id="radio-option" value="one" checked> Definitely
                         </label>
-                        <label for="radio-option">
+                        <label for="radio-option" id="radio-label" class="radio-label">
                             <input type="radio" name="radio-option" id="radio-option" value="two" > Maybe
                         </label>
-                        <label for="radio-option">
+                        <label for="radio-option" id="radio-label" class="radio-label">
                             <input type="radio" name="radio-option" id="radio-option" value="three" > Not sure
                         </label>
                     </label>
@@ -57,37 +58,37 @@
                     </label>
                     <label for="checkbox">
                         What would you like to see improved? <em>(Check all that apply)</em>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-one" value="check-one" id="checkbox"> Front-end Projects
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-two" value="check-two" id="checkbox"> Back-end Projects
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-three" value="check-three" id="checkbox"> Data Visualization
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-four" value="check-four" id="checkbox"> Challenges
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-five" value="check-five" id="checkbox"> Open Source Community
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-six" value="check-six" id="checkbox"> Gitter help rooms
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-seven" value="check-seven" id="checkbox"> Videos
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-eight" value="check-eight" id="checkbox"> City Meetups
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-nine" value="check-nine" id="checkbox"> Wiki
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-ten" value="check-ten" id="checkbox"> Forum
                         </label>
-                        <label for="checkbox">
+                        <label for="checkbox" class="check-label">
                             <input type="checkbox" name="check-eleven" value="check-eleven" id="checkbox"> Additional Courses
                         </label>
                     </label>
@@ -95,7 +96,7 @@
                 <fieldset>
                     <label for="textarea">
                         Any comments of suggestions?
-                        <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Enter your comments here..."></textarea>
+                        <textarea name="textarea" id="textarea" cols="60" rows="10" placeholder="Enter your comments here..."></textarea>
                     </label>
                     <label for="submit">
                        <input type="submit" id="submit" value="Submit">
